minor win related changes

--- a/mingw/libgimli.cbp
+++ b/mingw/libgimli.cbp
@@ -40,8 +40,6 @@
 			<Add option="--add-stdcall-alias" />
 			<Add option="--export-all-symbols" />
 			<Add option="--enable-auto-import" />
-			<Add directory="..\external\lib" />
-			<Add directory="." />
 			<Add library="libldl.a" />
 			<Add library="libtriangle.a" />
 			<Add library="libcholmod.a" />
@@ -49,6 +47,8 @@
 			<Add library="libamd.a" />
 			<Add library="..\external\lib\libblas.dll" />
 			<Add library="..\external\lib\liblapack.dll" />
+			<Add directory="..\external\lib" />
+			<Add directory="." />
 		</Linker>
 		<Unit filename="..\src\baseentity.h" />
 		<Unit filename="..\src\cholmodWrapper.cpp" />
@@ -107,6 +107,7 @@
 		<Unit filename="..\src\optionmap.h" />
 		<Unit filename="..\src\plane.cpp" />
 		<Unit filename="..\src\plane.h" />
+		<Unit filename="..\src\platform.cpp" />
 		<Unit filename="..\src\platform.h" />
 		<Unit filename="..\src\pos.cpp" />
 		<Unit filename="..\src\pos.h" />
