--- a/mingw/fit.cbp
+++ b/mingw/fit.cbp
@@ -44,13 +44,13 @@
 			<Add library="libgimli" />
 			<Add directory="." />
 		</Linker>
-		<Unit filename="harmfit.cpp">
+		<Unit filename="..\apps\fit\harmfit.cpp">
 			<Option target="harmfit" />
 		</Unit>
-		<Unit filename="mrsfit.cpp">
+		<Unit filename="..\apps\fit\mrsfit.cpp">
 			<Option target="mrsfit" />
 		</Unit>
-		<Unit filename="polyfit.cpp">
+		<Unit filename="..\apps\fit\polyfit.cpp">
 			<Option target="polyfit" />
 		</Unit>
 		<Extensions>
