finished DC/EM joint inversion tutorial example

--- a/doc/tutorial/code/enhanced/Makefile
+++ b/doc/tutorial/code/enhanced/Makefile
@@ -11,4 +11,4 @@ ttinvoffset: ttinvoffset.cpp
 	g++ -g -O3 ttinvoffset.cpp -o ttinvoffset $(GIMLIINC) $(GIMLILIB)
 
 clean:
-	rm -rf *~ mt1dinv0
+	rm -rf *~ mt1dinv0 ttinvoffset
