added second order constraints and mixed types (0th+1st and 0th+2nd) minor changes in python scripts and Win API added unit test cbp

--- a/mingw/libgimli.cbp
+++ b/mingw/libgimli.cbp
@@ -34,6 +34,7 @@
 			<Add option="-DHAVE_LIBAMD" />
 			<Add option="-DHAVE_LIBTRIANGLE" />
 			<Add option="-DHAVE_LIBCHOLMOD" />
+			<Add option="-DUSE_IPC" />
 		</Compiler>
 		<Linker>
 			<Add option="-s" />
