win32 gcc.4.6.1 version bump

--- a/mingw/libgimli.cbp
+++ b/mingw/libgimli.cbp
@@ -32,6 +32,7 @@
 			<Add directory="..\external" />
 			<Add directory="..\src" />
 			<Add directory="..\..\..\boost\include" />
+			<Add directory="..\..\boost\include" />
 		</Compiler>
 		<Linker>
 			<Add option="-s" />
