removed nasty linker message by adding -Wl,--enable-auto-import to apps code blocks projects

--- a/mingw/fit.cbp
+++ b/mingw/fit.cbp
@@ -41,6 +41,7 @@
 			<Add directory="../src" />
 		</Compiler>
 		<Linker>
+			<Add option="-Wl,--enable-auto-import" />
 			<Add library="libgimli" />
 			<Add directory="." />
 		</Linker>
