--- a/mingw/misc.cbp
+++ b/mingw/misc.cbp
@@ -29,6 +29,7 @@
 			<Add directory="..\src" />
 		</Compiler>
 		<Linker>
+			<Add option="-Wl,--enable-auto-import" />
 			<Add library="libgimli" />
 			<Add directory="." />
 		</Linker>
