--- a/mingw/traveltime.cbp
+++ b/mingw/traveltime.cbp
@@ -37,6 +37,7 @@
 			<Add directory="..\src" />
 		</Compiler>
 		<Linker>
+			<Add option="-Wl,--enable-auto-import" />
 			<Add library="gimli" />
 			<Add directory="." />
 		</Linker>
