new element shape function generation. see changelog

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -79,6 +79,7 @@ libgimli_la_SOURCES = \
 			plane.cpp \
 			platform.h \
 			platform.cpp \
+			polynomial.h \
 			pos.h \
 			pos.cpp \
 			quaternion.h \
